feat(i18n): version checking